solo acomode cosas y agregué un archivo js de carrito

--- a/css/carrito.css
+++ b/css/carrito.css
@@ -2,4 +2,16 @@
     background-color: rgb(66, 80, 190);
     color: black;
     font-size: 1.2rem;
+    border-radius: 1rem;
+}
+
+#imgCarrito {
+    border-radius: 1rem;
+}
+
+#botonEliminar {
+    background-color: transparent;
+    border: 0;
+    color: red;
+    height: 40px;
 }
