--- a/css/carrito.css
+++ b/css/carrito.css
@@ -28,3 +28,26 @@
     color: red;
     height: 40px;
 }
+
+.contenedorTotal {
+    border: 1px solid black;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    background-color: rgb(66, 80, 190);
+    color: white;
+}
+
+.divBotonComprar {
+    border: 1px solid black;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: rgb(66, 80, 190);
+}
+
+.botonComprar {
+    
+}
+
+.contenedorFuncionesCarrito{
+    
+}
