--- a/css/index.css
+++ b/css/index.css
@@ -55,6 +55,7 @@ a {
     top: 0;
     height: 100vh;
     padding-right: 0;
+    padding-top: 50px;
 }
 
 .asideBotones {
@@ -85,6 +86,9 @@ a {
     color: white;
 }
 
+/* .locales, .promociones {
+    display: none;
+} */
 
 @media (max-width: 575px) {
     .contenedorAside {
