los cambios fueron para agregar funcion al buscador

--- a/css/index.css
+++ b/css/index.css
@@ -86,9 +86,9 @@ a {
     color: white;
 }
 
-/* .locales, .promociones {
+.filto {
     display: none;
-} */
+}
 
 @media (max-width: 575px) {
     .contenedorAside {
