--- a/css/administrador.css
+++ b/css/administrador.css
@@ -1,15 +1,16 @@
-*{
-  margin: 0;
-}
-
-body {
-  background-color: rgb(66, 80, 190);
-}
 
 #tableStyle {
   
   --bs-table-bg: null;
   background-color: rgb(203, 208, 249);
-  
+  vertical-align: middle;
+  --bs-table-border-color: rgb(66, 80, 190);
 }
 
+#modalContent {
+  background-color: rgb(203, 208, 249);
+}
+
+h1{
+  color: white;
+}
