los cambios modificados fueron pequeños detalles para soluionar problemas y agregué una nueva carpeta

--- a/css/carrito.css
+++ b/css/carrito.css
@@ -20,6 +20,7 @@
 
 #volverAlInicio{
     text-decoration: none;
+
 }
 
 #total {
@@ -94,5 +95,11 @@
 @media (min-width: 576px){
     .botonInicioFin{
         display: none;
+    }
+}
+
+@media (max-width: 575px){
+    .botonInicioFin{
+        margin-bottom: 100%;
     }
 }
